fix: Set max-width to ease readability. Fix pre tag whitespace. Restore margins in numbered list.

--- a/extension_explorer/static/css/theme.css
+++ b/extension_explorer/static/css/theme.css
@@ -8518,6 +8518,20 @@ blockquote {
   margin: 0 1rem 1rem;
   font-style: italic; }
 
+pre {
+  white-space: pre-wrap; }
+
+.ee-max-width h1, .ee-max-width .h1,
+.ee-max-width h2,
+.ee-max-width .h2,
+.ee-max-width h3,
+.ee-max-width .h3,
+.ee-max-width h4,
+.ee-max-width .h4,
+.ee-max-width p,
+.ee-max-width li {
+  max-width: 70ch; }
+
 .custom-select {
   -webkit-appearance: none;
   -moz-appearance: none; }
